Added photo url to candidate model

--- a/app/views/candidates/_form.html.erb
+++ b/app/views/candidates/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :photo_url %><br />
+    <%= f.text_field :photo_url %>
+  </div>
+
+  <div class="field">
     <%= f.label :position_id %><br />
     <%= f.select :position_id, Position.select_options %>
   </div>
