Added voting ability

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,3 +1,6 @@
 <h1>Welcome</h1>
 
-
+<ul>
+  <li><%= link_to 'Positions', positions_path %></li>
+  <li><%= link_to 'Candidates', candidates_path %></li>
+</ul>
