Added javascript voting validate and results

--- a/app/views/vote/index.html.erb
+++ b/app/views/vote/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Vote</h1>
 
-<p>
+<form method=post action="/vote/vote">
+  ID: <input type="textbox" name="voter" size="10" />
 
+  <input type="submit" />
+</form>
 
-</p>
