--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -3,4 +3,6 @@
 <ul>
   <li><%= link_to 'Positions', positions_path %></li>
   <li><%= link_to 'Candidates', candidates_path %></li>
+  <li><%= link_to 'Results', '/results' %></li>
+
 </ul>
